Cambios a adopciones y paseadores

--- a/OhMyDog/src/css/app.scss
+++ b/OhMyDog/src/css/app.scss
@@ -23,7 +23,14 @@
     color: #FFF;
 }
 
+.textoTituloTarjeta{
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
 div{
     text-align: start;
     font-size: 0.9rem;
+    overflow: hidden;
 }
