--- a/OhMyDog/src/css/app.scss
+++ b/OhMyDog/src/css/app.scss
@@ -29,6 +29,12 @@
     font-size: 1.1rem;
 }
 
+.separadorFormulario{
+    border-top-style: solid;
+    border-width: 1px;
+    border-color: $secondary;
+}
+
 div{
     text-align: start;
     font-size: 0.9rem;
