--- a/OhMyDog/src/css/app.scss
+++ b/OhMyDog/src/css/app.scss
@@ -1,5 +1,9 @@
 // app global css in SCSS form
 
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 .textoBoton{
     text-align: center;
     font-size: 0.9rem;
