--- a/OhMyDog/src/css/app.scss
+++ b/OhMyDog/src/css/app.scss
@@ -4,6 +4,22 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+/* Perfil */
+.textoTituloPerfil{
+    text-align: start;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: $primary;
+}
+
+.textoPerfil {
+    text-align: start;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+}
+
 .textoBoton{
     text-align: center;
     font-size: 1rem;
